Updated Flask app with TensorFlow Lite model

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -30,8 +30,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fd4ab276-9bd8-4456-81ac-2a0fb2ee501b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2c848bc1-c9f3-4cfa-a604-59d9c62f5172",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'message': 'File received!'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = \"http://127.0.0.1:5000/predict\"\n",
+    "files = {'file': open(r'C:\\Users\\preml\\Desktop\\Indian Medicinal Leaves Image Datasets\\Medicinal plant dataset\\Neem\\599.jpg', 'rb')}  # Make sure this file exists\n",
+    "\n",
+    "response = requests.post(url, files=files)\n",
+    "print(response.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39ae8d95-9686-45ff-93c2-9aaa8922e587",
    "metadata": {},
    "outputs": [],
    "source": []
